fix: align project cards properly

--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,4 +1,5 @@
 @use '../../scss/variables' as *;
+@use '../../scss/mixins' as *;
 
 .projects {
   min-height: 100vh;
@@ -17,13 +18,18 @@
   }
 
   &__wrapper {
+    width: 80vw;
     display: flex;
     flex-direction: column;
     gap: 2rem;
+
+    @include larger-screen {
+      width: 70vw;
+    }
   }
 
   &__container {
-    width: 70vw;
+    // width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1rem;
